tests/ui/ast_conditional_literal.stderr
error[E0505]: cannot move out of `lit` because it is borrowed
  --> $DIR/ast_conditional_literal.rs:11:10
   |
10 |     let cond = ast::ConditionalLiteral::new(&lit, &args);
   |                                             ---- borrow of `lit` occurs here
11 |     drop(lit);
   |          ^^^ move out of `lit` occurs here
12 |     drop(args);
13 |     let _end = cond;
   |                ---- borrow later used here

error[E0505]: cannot move out of `args` because it is borrowed
  --> $DIR/ast_conditional_literal.rs:12:10
   |
10 |     let cond = ast::ConditionalLiteral::new(&lit, &args);
   |                                                   ----- borrow of `args` occurs here
11 |     drop(lit);
12 |     drop(args);
   |          ^^^^ move out of `args` occurs here
13 |     let _end = cond;
   |                ---- borrow later used here

For more information about this error, try `rustc --explain E0505`.
